[package]
name = "rintha"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2.6"
clap = { version = "2.33.3", features = ["yaml"] }
downloader = { version = "0.2.6", features = ["tui"] }
femtorinth = "0.1.2"
sha-1 = "0.9.8"
shellexpand = "2.1.0"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
confy = "0.4.0"
