[package]
name = "rintha"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2"
clap = { version = "2.33", features = ["yaml"] }
downloader = { version = "0.2", features = ["tui"] }
femtorinth = "0.1"
sha-1 = "0.9"
shellexpand = "2.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
confy = "0.4"
directories-next = "2.0.0"
